--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -11,9 +11,9 @@
     <a-scene background="color: #333333">
       <a-box id="myBox"
         width="3"
-        height="2"
-        depth="1"
-        color="#BBAA33" 
+        height="3"
+        depth="3"
+        color="#39FF14" 
         shadow>
       </a-box>
     </a-scene>
