--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -15,6 +15,7 @@
         depth="1"
         color="#39FF14" 
         shadow>
+        position="-1 3 1"
       </a-box>
     </a-scene>
   </body>
