--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,7 +13,7 @@
         width="1"
         height="1"
         depth="1"
-        color="#39FF20" 
+        color="#FFFFFF" 
         position="-1 3 1"
         shadow>
       </a-box>
