--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,7 +13,7 @@
         width="1"
         height="1"
         depth="1"
-        color="#FFF01F" 
+        color="#FFFFFF" 
         position="0 1 0"
         shadow>
       </a-box>
