--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -28,13 +28,13 @@
         animation__mouseenter="
           property: components.material.material.color; 
           type: color; 
-          to: blue; 
+          to: white; 
           startEvents: mouseenter; 
           dur: 500;"
         animation__mouseleave="
           property: components.material.material.color; 
           type: color; 
-          to: red; 
+          to: green; 
           startEvents: mouseleave; 
           dur: 500;">  
       </a-box>
