--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -23,7 +23,7 @@
           position="0 0 -1"
           radius-inner= "0.05"
           radius-outer= "0.01"
-          material="color: #FFF01F; shader: flat">
+          material="color: green; shader: flat">
         </a-ring>
       </a-camera>
       
