--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -22,8 +22,8 @@
         <a-ring id="cursorRing" 
           position="0 0 -1"
           radius-inner= "0.05"
-          radius-outer= "0.01"
-          material="color: green; shader: flat">
+          radius-outer= "0.03"
+          material="color: red; shader: flat">
         </a-ring>
       </a-camera>
       
