--- a/06InteractionHeadset/index.html
+++ b/06InteractionHeadset/index.html
@@ -21,9 +21,9 @@
         </a-entity>
         <a-ring id="cursorRing" 
           position="0 0 -1"
-          radius-inner= "0.05"
-          radius-outer= "0.03"
-          material="color: red; shader: flat">
+          radius-inner= "0.04"
+          radius-outer= "0.07"
+          material="color: green; shader: flat">
         </a-ring>
       </a-camera>
       
