--- a/04Animation/index.html
+++ b/04Animation/index.html
@@ -25,7 +25,7 @@
         animation="property: rotation; 
                    to: -180 -180 -180; 
                    dur: 2000; 
-                   easing: linear; 
+                   easing: easeInOutElastic; 
                    loop: true" >
       </a-box>
       <a-box id="myOtherBox" 
